Append readme file, minor refactoring